--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="./templates/projects.html">Projects</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./templates/experiences.html">Experience</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./templates/designs.html">Designs</a>
-              </li>
             </ul>
           </div>
         </nav>
@@ -76,7 +70,7 @@
             <div class="about-text">
               <h2>About Ryan Burtis</h2>
               <p></p>
-              <img src="./static/images/salvador logo/transparent/logo_transparent_cropped.png" alt="Logo" style="width:250px;">
+              <img src="./static/images/logos/burtis logo.png" alt="Logo" style="width:250px;">
             </div>
           </div>
 
@@ -103,15 +97,11 @@
 
         <div class="row pics">
           <div class="col-md-4">
-            <a class="btn btn-primary" href="./static/documents/ **********" role="button">Resume</a>
+            <a class="btn btn-primary" href="./static/documents/Resume_Mk-2.docx" role="button">Resume</a>
           </div>
 
           <div class="col-md-4">
             <a class="btn btn-primary" href="./templates/projects.html" role="button">Projects</a>
-          </div>
-
-          <div class="col-md-4">
-            <a class="btn btn-primary" href="./templates/experiences.html" role="button">Experiences</a>
           </div>
         </div>
 
@@ -166,7 +156,7 @@
       <li> | </li>
       <a  href="https://www.linkedin.com/in/ryan-burtis/"><li>LinkedIn</li></a>
       <li> | </li>
-      <a  href="../index.html"><li>personal website</li></a>
+      <a  href="https://www.facebook.com/ryan.burtis.5"><li>FaceBook</li></a>
       <li> | </li>
     </ul>
   </footer>
